--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Hello
+<!doctype html>
+
+<head>
+	<link rel="stylesheet" href="style.css"/>
+	<title>APAC</title>
+	<link rel="shortcut icon" type="image/png" href="img/APAC.png"/>
+</head>
+<body>
+	<header>
+		<h1><a href="index.html" style="color: black; text-decoration: none;">APAC SWIMMING</a></h1>
+	</header>
+	<ul class="nav">
+		<li><a href="">About</a></li>
+		<li><a href="">Rankings</a></li>
+		<li><a href="">Data</a></li>
+		<li><a href="apac2.html">APAC2</a></li>
+	</ul>
+</body>
